--- a/WebContent/assets/css/session.css
+++ b/WebContent/assets/css/session.css
@@ -305,4 +305,8 @@ color: #9b9b9b;
     width: 110px;
     height: 40px;
 }
+.next-step-div {
+    padding-bottom: 20px;
+    padding-left: 20px;
+}
 }
